js test: Bump js-yaml version
Resolves https://github.com/MaterializeInc/materialize/security/dependabot/133

Brought up in https://materializeinc.slack.com/archives/C01LKF361MZ/p1767815609760479

--- a/test/lang/js/package.json
+++ b/test/lang/js/package.json
@@ -18,6 +18,9 @@
     "pg-query-stream": "^4.5.3",
     "prettier": "^2.0.4"
   },
+  "resolutions": {
+    "js-yaml": "^3.14.2"
+  },
   "prettier": {
     "tabWidth": 2,
     "trailingComma": "all"
